[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scripts/Cursor.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Toolbar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tools/X-Ray_off.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/XRAY Mask.png" type="Texture" id=4]
[ext_resource path="res://Assets/Placeholders/organ.png" type="Texture" id=5]
[ext_resource path="res://Assets/Placeholders/alienplacehgolderwound.png" type="Texture" id=6]
[ext_resource path="res://Assets/Placeholders/alienplacehgolderXRAY.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tools/X-Ray_on.png" type="Texture" id=8]
[ext_resource path="res://Assets/Placeholders/alienplacehgolder.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/hand.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tools/Scalple.png" type="Texture" id=11]
[ext_resource path="res://Assets/Tools/Sharpie.png" type="Texture" id=12]
[ext_resource path="res://Assets/Tools/Syringe.png" type="Texture" id=13]
[ext_resource path="res://Assets/Tools/Syringe_goop.png" type="Texture" id=14]
[ext_resource path="res://Assets/Tools/Tape.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Toolbar.gd" type="Script" id=17]
[ext_resource path="res://Assets/Tools/Tape_use.png" type="Texture" id=18]
[ext_resource path="res://Assets/Tools/Sharpie_use.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Blood.png" type="Texture" id=20]
[ext_resource path="res://Scripts/BloodParticles.gd" type="Script" id=21]
[ext_resource path="res://Assets/Placeholders/Heart.png" type="Texture" id=22]
[ext_resource path="res://Assets/Placeholders/tube.png" type="Texture" id=23]
[ext_resource path="res://Assets/Placeholders/Pallup.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Pallup.gd" type="Script" id=25]
[ext_resource path="res://Assets/Alien/Alien1.png" type="Texture" id=26]

[sub_resource type="CircleShape2D" id=6]
radius = 31.9531

[sub_resource type="Animation" id=7]
resource_name = "Pop"

[sub_resource type="Animation" id=4]
resource_name = "Beating"
length = 0.4
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Heart:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0565712, 0.0246359 ), Vector2( 0.068, 0.025 ), Vector2( 0.0565712, 0.0246359 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Heart:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.0565712, 0.0246359 ) ]
}

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.398876, 1 ), 0.0, 0.234713, 0, 0, Vector2( 1, 0 ), -0.039864, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.89
flag_disable_z = true
spread = 16.49
gravity = Vector3( 0, 98, 0 )
initial_velocity = 189.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 0.99
scale_random = 0.5
scale_curve = SubResource( 2 )
color = Color( 0.4, 0, 0, 1 )
hue_variation = 0.09
hue_variation_random = 0.59

[node name="Main" type="Node2D"]
script = ExtResource( 16 )

[node name="Organs" type="Sprite" parent="."]
position = Vector2( 634.805, 298.662 )
rotation = 0.00611781
scale = Vector2( 3.60764, 7.36199 )
texture = ExtResource( 5 )

[node name="Polyp Spawner" type="Node2D" parent="Organs"]
scale = Vector2( 1, 1 )

[node name="Pallup" type="StaticBody2D" parent="Organs/Polyp Spawner"]
position = Vector2( 35.2868, 24.5263 )
rotation = -0.00299798
scale = Vector2( 0.277186, 0.135841 )
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Organs/Polyp Spawner/Pallup"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Organs/Polyp Spawner/Pallup"]
texture = ExtResource( 24 )

[node name="Timer" type="Timer" parent="Organs/Polyp Spawner/Pallup"]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Organs/Polyp Spawner/Pallup"]
anims/Pop = SubResource( 7 )

[node name="Tube2" type="Sprite" parent="Organs"]
position = Vector2( -59.5494, -22.7318 )
rotation = 0.401286
scale = Vector2( 1.26326, 0.741201 )
texture = ExtResource( 23 )

[node name="Tube" type="Sprite" parent="Organs"]
position = Vector2( 83.8341, 0.0268707 )
scale = Vector2( 1.53826, 0.482904 )
texture = ExtResource( 23 )

[node name="Tube3" type="Sprite" parent="Organs"]
position = Vector2( -51.1388, 29.268 )
rotation = 2.53558
scale = Vector2( 1.08054, 0.851546 )
texture = ExtResource( 23 )

[node name="Heart" type="Sprite" parent="Organs"]
position = Vector2( -8.97266, -3.55457 )
scale = Vector2( 0.0565712, 0.0246359 )
texture = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Organs"]
reset_on_save = false
anims/Beating = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Alien" type="Sprite" parent="."]
visible = false
position = Vector2( 647, 307 )
scale = Vector2( 0.677, 0.677 )
texture = ExtResource( 26 )

[node name="Alien placeholder" type="Sprite" parent="."]
visible = false
position = Vector2( 1611, 258 )
scale = Vector2( 5.13, 5.13 )
texture = ExtResource( 9 )

[node name="XRAY placeholder" type="Sprite" parent="Alien placeholder"]
visible = false
light_mask = 2
z_index = 1
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Alien placeholder/XRAY placeholder"]
show_behind_parent = true
light_mask = 2
margin_left = -137.0
margin_top = -67.0
margin_right = 82.0
margin_bottom = 66.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Alien Guts" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 95, 93 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="Openthing" type="Sprite" parent="Alien Guts"]
position = Vector2( 580, 258.9 )
scale = Vector2( 4.35656, 4.35656 )
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Alien Guts"]
position = Vector2( 0, -59.1 )
polygon = PoolVector2Array( 575, 150, 679, 211, 639, 279, 663, 350, 627, 396, 637, 464, 618, 483, 564, 483, 526, 440, 469, 413, 454, 359, 486, 317, 449, 264, 454, 227, 508, 198 )

[node name="Toolbar" type="Sprite" parent="."]
modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
position = Vector2( 137, 301 )
scale = Vector2( 0.30525, 0.30525 )
texture = ExtResource( 2 )
script = ExtResource( 17 )

[node name="ToolBarCollider" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/ToolBarCollider"]
polygon = PoolVector2Array( -478.297, -668.305, -258.804, -779.689, 65.5201, -756.757, 88.4521, -85.1761, 252.252, -16.38, 222.768, 579.853, -232.596, 848.485, -497.953, 766.585 )

[node name="X-Ray" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="X-RayIcon" type="Sprite" parent="Toolbar/X-Ray"]
position = Vector2( -42.588, 153.972 )
scale = Vector2( 0.963692, 0.963692 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/X-Ray"]
polygon = PoolVector2Array( -3.276, -42.5881, 68.7961, -42.5881, 140.868, -19.656, 176.904, -45.8641, 222.768, -16.38, 226.044, 265.356, 144.144, 268.632, 137.592, 343.98, -278.46, 343.98, -278.46, 271.908, -321.048, 232.596, -317.772, 98.28, -271.908, 55.692, -258.804, -29.4841 )

[node name="Scalple" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="ScalpleIcon" type="Sprite" parent="Toolbar/Scalple"]
position = Vector2( -42.611, -413.808 )
rotation = -1.39762
scale = Vector2( 0.937684, 0.900881 )
texture = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/Scalple"]
polygon = PoolVector2Array( -16.38, -746.929, 16.38, -720.721, 39.312, -661.753, 32.76, -589.681, 3.276, -553.645, 22.932, -114.66, 9.828, -62.2441, -26.208, -49.1401, -55.6921, -58.9681, -104.832, -733.825, -95.0041, -756.757, -75.3481, -760.033 )

[node name="Tape" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="TapeIcon" type="Sprite" parent="Toolbar/Tape"]
position = Vector2( -255.528, -651.925 )
scale = Vector2( 0.963007, 0.963007 )
texture = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/Tape"]
polygon = PoolVector2Array( -226.044, -756.757, -199.836, -743.653, -180.18, -737.101, -163.8, -717.445, -150.696, -694.513, -147.42, -668.305, -150.696, -642.097, -160.524, -606.061, -176.904, -583.129, -232.596, -553.645, -275.184, -543.817, -317.772, -550.369, -347.256, -570.025, -363.636, -599.509, -373.464, -638.821, -357.084, -665.029, -334.152, -694.513, -311.22, -720.721, -285.012, -750.205, -258.804, -756.757 )

[node name="Syringe" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="SyringeIcon" type="Sprite" parent="Toolbar/Syringe"]
position = Vector2( -49.14, 648.649 )
scale = Vector2( 1.00191, 1.00191 )
texture = ExtResource( 13 )

[node name="SyringeGoop" type="Sprite" parent="Toolbar/Syringe/SyringeIcon"]
show_behind_parent = true
position = Vector2( 85.0135, -45.7765 )
texture = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/Syringe"]
polygon = PoolVector2Array( 42.588, 533.989, 117.936, 530.713, 173.628, 511.057, 190.008, 530.713, 147.42, 560.197, 121.212, 619.165, -85.1761, 727.273, -124.488, 710.893, -176.904, 740.377, -216.216, 786.241, -229.32, 782.965, -278.46, 704.341, -268.632, 681.409, -239.148, 674.857, -212.94, 684.685, -147.42, 651.925, -134.316, 612.613 )

[node name="Sharpie" type="StaticBody2D" parent="Toolbar"]
input_pickable = true

[node name="SharpieIcon" type="Sprite" parent="Toolbar/Sharpie"]
position = Vector2( -245.7, -288.288 )
rotation = -0.0292494
scale = Vector2( 0.906925, 0.964934 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Toolbar/Sharpie"]
polygon = PoolVector2Array( -304.668, -507.781, -193.284, -511.057, -186.732, -497.953, -206.388, -409.5, -193.284, -370.188, -190.008, -288.288, -176.904, -150.696, -186.732, -81.9001, -226.044, -65.5201, -281.736, -68.7961, -301.392, -95.0041, -314.496, -357.084, -294.84, -402.948, -317.772, -465.193 )

[node name="Cursor" type="Node2D" parent="."]
visible = false
position = Vector2( 505, 290 )
rotation = -3.09095
scale = Vector2( 0.206, 0.206 )
script = ExtResource( 1 )

[node name="Hand" type="Sprite" parent="Cursor"]
position = Vector2( -88.3833, -103.974 )
rotation = 0.320207
scale = Vector2( 0.712835, -0.712835 )
texture = ExtResource( 10 )

[node name="Scalple" type="Sprite" parent="Cursor"]
visible = false
position = Vector2( -452.306, -293.013 )
rotation = 0.536765
scale = Vector2( 1.683, 1.683 )
texture = ExtResource( 11 )
flip_v = true

[node name="Particles2D" type="Particles2D" parent="Cursor/Scalple"]
visible = false
show_behind_parent = true
position = Vector2( 287.995, -4.62848 )
rotation = -3.7282
scale = Vector2( 2.5, 2.5 )
amount = 400
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 20 )
script = ExtResource( 21 )

[node name="X-Ray" type="Node2D" parent="Cursor"]
position = Vector2( 0, 4000 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="X-RayOn" type="Sprite" parent="Cursor/X-Ray"]
position = Vector2( -457.355, 18.5952 )
rotation = 3.09707
scale = Vector2( 2.841, 2.841 )
z_index = 1
texture = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="Cursor/X-Ray/X-RayOn"]
light_mask = 2
position = Vector2( -11.9381, 6.82184 )
scale = Vector2( 170.545, 170.545 )
texture = ExtResource( 4 )
mode = 3
range_item_cull_mask = 2

[node name="Tape" type="Sprite" parent="Cursor"]
visible = false
position = Vector2( -195.096, 13.4655 )
rotation = 1.3016
scale = Vector2( 2.18079, 2.18079 )
texture = ExtResource( 18 )

[node name="Sharpie" type="Sprite" parent="Cursor"]
visible = false
position = Vector2( -229.809, -323.056 )
rotation = 3.09095
scale = Vector2( 1.53858, 1.53858 )
texture = ExtResource( 19 )

[node name="Syringe" type="Sprite" parent="Cursor"]
visible = false
position = Vector2( -298.886, -142.93 )
rotation = -0.0506426
scale = Vector2( 1.40675, -1.40675 )
texture = ExtResource( 13 )

[connection signal="input_event" from="Organs/Polyp Spawner/Pallup" to="Organs/Polyp Spawner/Pallup" method="_on_Pallup_input_event"]
[connection signal="timeout" from="Organs/Polyp Spawner/Pallup/Timer" to="Organs/Polyp Spawner/Pallup" method="_on_Timer_timeout"]
[connection signal="input_event" from="Alien Guts" to="." method="_on_Alien_Guts_input_event"]
[connection signal="tool_changed" from="Toolbar" to="." method="_on_Toolbar_tool_changed"]
[connection signal="tool_changed" from="Toolbar" to="Cursor" method="_on_Toolbar_tool_changed"]
[connection signal="mouse_entered" from="Toolbar/ToolBarCollider" to="Toolbar" method="_on_ToolBarCollider_mouse_entered"]
[connection signal="mouse_entered" from="Toolbar/ToolBarCollider" to="Cursor" method="_on_ToolBarCollider_mouse_entered"]
[connection signal="input_event" from="Toolbar/X-Ray" to="Toolbar" method="_on_XRay_input_event"]
[connection signal="input_event" from="Toolbar/Scalple" to="Toolbar" method="_on_Scalple_input_event"]
[connection signal="input_event" from="Toolbar/Tape" to="Toolbar" method="_on_Tape_input_event"]
[connection signal="input_event" from="Toolbar/Syringe" to="Toolbar" method="_on_Syringe_input_event"]
[connection signal="input_event" from="Toolbar/Sharpie" to="Toolbar" method="_on_Sharpie_input_event"]
